internal/config/testdata/invalid-config/EmptyAppAPICredentials.hjson
{
  APIAppCredentials:
  {
    ClientID: ""
    ClientSecret: ""
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}
